miniml.output
Terminaux inutilisés dans la grammaire

   OR
   AND
   NOT
   GT
   GTE
   LT
   LTE
   EQU
   NEQ
   PREFIX


État 21 conflits: 4 décalage/réduction
État 30 conflits: 4 décalage/réduction
État 31 conflits: 10 décalage/réduction
État 35 conflits: 10 décalage/réduction


Grammaire

    0 $accept: program $end

    1 program: %empty
    2        | TWOSEMI program
    3        | expr TWOSEMI program

    4 expr: INT
    5     | NAME
    6     | LPAREN expr RPAREN
    7     | TBEGIN expr TEND
    8     | expr expr
    9     | expr infix_op expr
   10     | expr SEMI expr
   11     | LET let_binding IN expr

   12 let_binding: NAME EQUAL expr
   13            | NAME parameter_list EQUAL expr

   14 parameter_list: NAME parameter_list
   15               | NAME

   16 infix_op: PLUS
   17         | MINUS
   18         | MUL
   19         | DIV


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
LET (258) 11
IN (259) 11
EQUAL (260) 12 13
TBEGIN (261) 7
TEND (262) 7
INT (263) 4
NAME (264) 5 12 13 14 15
TWOSEMI (265) 2 3
SEMI (266) 10
LPAREN (267) 6
RPAREN (268) 6
PLUS (269) 16
MINUS (270) 17
MUL (271) 18
DIV (272) 19
OR (273)
AND (274)
NOT (275)
GT (276)
GTE (277)
LT (278)
LTE (279)
EQU (280)
NEQ (281)
PREFIX (282)
FUNCALL (283)


Non-terminaux, suivis des règles où ils apparaissent

$accept (29)
    à gauche: 0
program (30)
    à gauche: 1 2 3, à droite: 0 2 3
expr (31)
    à gauche: 4 5 6 7 8 9 10 11, à droite: 3 6 7 8 9 10 11 12 13
let_binding (32)
    à gauche: 12 13, à droite: 11
parameter_list (33)
    à gauche: 14 15, à droite: 13 14
infix_op (34)
    à gauche: 16 17 18 19, à droite: 9


État 0

    0 $accept: . program $end

    LET      décalage et aller à l'état 1
    TBEGIN   décalage et aller à l'état 2
    INT      décalage et aller à l'état 3
    NAME     décalage et aller à l'état 4
    TWOSEMI  décalage et aller à l'état 5
    LPAREN   décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 1 (program)

    program  aller à l'état 7
    expr     aller à l'état 8


État 1

   11 expr: LET . let_binding IN expr

    NAME  décalage et aller à l'état 9

    let_binding  aller à l'état 10


État 2

    7 expr: TBEGIN . expr TEND

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    LPAREN  décalage et aller à l'état 6

    expr  aller à l'état 11


État 3

    4 expr: INT .

    $défaut  réduction par utilisation de la règle 4 (expr)


État 4

    5 expr: NAME .

    $défaut  réduction par utilisation de la règle 5 (expr)


État 5

    2 program: TWOSEMI . program

    LET      décalage et aller à l'état 1
    TBEGIN   décalage et aller à l'état 2
    INT      décalage et aller à l'état 3
    NAME     décalage et aller à l'état 4
    TWOSEMI  décalage et aller à l'état 5
    LPAREN   décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 1 (program)

    program  aller à l'état 12
    expr     aller à l'état 8


État 6

    6 expr: LPAREN . expr RPAREN

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    LPAREN  décalage et aller à l'état 6

    expr  aller à l'état 13


État 7

    0 $accept: program . $end

    $end  décalage et aller à l'état 14


État 8

    3 program: expr . TWOSEMI program
    8 expr: expr . expr
    9     | expr . infix_op expr
   10     | expr . SEMI expr

    LET      décalage et aller à l'état 1
    TBEGIN   décalage et aller à l'état 2
    INT      décalage et aller à l'état 3
    NAME     décalage et aller à l'état 4
    TWOSEMI  décalage et aller à l'état 15
    SEMI     décalage et aller à l'état 16
    LPAREN   décalage et aller à l'état 6
    PLUS     décalage et aller à l'état 17
    MINUS    décalage et aller à l'état 18
    MUL      décalage et aller à l'état 19
    DIV      décalage et aller à l'état 20

    expr      aller à l'état 21
    infix_op  aller à l'état 22


État 9

   12 let_binding: NAME . EQUAL expr
   13            | NAME . parameter_list EQUAL expr

    EQUAL  décalage et aller à l'état 23
    NAME   décalage et aller à l'état 24

    parameter_list  aller à l'état 25


État 10

   11 expr: LET let_binding . IN expr

    IN  décalage et aller à l'état 26


État 11

    7 expr: TBEGIN expr . TEND
    8     | expr . expr
    9     | expr . infix_op expr
   10     | expr . SEMI expr

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    TEND    décalage et aller à l'état 27
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    SEMI    décalage et aller à l'état 16
    LPAREN  décalage et aller à l'état 6
    PLUS    décalage et aller à l'état 17
    MINUS   décalage et aller à l'état 18
    MUL     décalage et aller à l'état 19
    DIV     décalage et aller à l'état 20

    expr      aller à l'état 21
    infix_op  aller à l'état 22


État 12

    2 program: TWOSEMI program .

    $défaut  réduction par utilisation de la règle 2 (program)


État 13

    6 expr: LPAREN expr . RPAREN
    8     | expr . expr
    9     | expr . infix_op expr
   10     | expr . SEMI expr

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    SEMI    décalage et aller à l'état 16
    LPAREN  décalage et aller à l'état 6
    RPAREN  décalage et aller à l'état 28
    PLUS    décalage et aller à l'état 17
    MINUS   décalage et aller à l'état 18
    MUL     décalage et aller à l'état 19
    DIV     décalage et aller à l'état 20

    expr      aller à l'état 21
    infix_op  aller à l'état 22


État 14

    0 $accept: program $end .

    $défaut  accepter


État 15

    3 program: expr TWOSEMI . program

    LET      décalage et aller à l'état 1
    TBEGIN   décalage et aller à l'état 2
    INT      décalage et aller à l'état 3
    NAME     décalage et aller à l'état 4
    TWOSEMI  décalage et aller à l'état 5
    LPAREN   décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 1 (program)

    program  aller à l'état 29
    expr     aller à l'état 8


État 16

   10 expr: expr SEMI . expr

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    LPAREN  décalage et aller à l'état 6

    expr  aller à l'état 30


État 17

   16 infix_op: PLUS .

    $défaut  réduction par utilisation de la règle 16 (infix_op)


État 18

   17 infix_op: MINUS .

    $défaut  réduction par utilisation de la règle 17 (infix_op)


État 19

   18 infix_op: MUL .

    $défaut  réduction par utilisation de la règle 18 (infix_op)


État 20

   19 infix_op: DIV .

    $défaut  réduction par utilisation de la règle 19 (infix_op)


État 21

    8 expr: expr . expr
    8     | expr expr .
    9     | expr . infix_op expr
   10     | expr . SEMI expr

    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    LPAREN  décalage et aller à l'état 6

    TBEGIN    [réduction par utilisation de la règle 8 (expr)]
    INT       [réduction par utilisation de la règle 8 (expr)]
    NAME      [réduction par utilisation de la règle 8 (expr)]
    LPAREN    [réduction par utilisation de la règle 8 (expr)]
    $défaut  réduction par utilisation de la règle 8 (expr)

    expr      aller à l'état 21
    infix_op  aller à l'état 22


État 22

    9 expr: expr infix_op . expr

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    LPAREN  décalage et aller à l'état 6

    expr  aller à l'état 31


État 23

   12 let_binding: NAME EQUAL . expr

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    LPAREN  décalage et aller à l'état 6

    expr  aller à l'état 32


État 24

   14 parameter_list: NAME . parameter_list
   15               | NAME .

    NAME  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 15 (parameter_list)

    parameter_list  aller à l'état 33


État 25

   13 let_binding: NAME parameter_list . EQUAL expr

    EQUAL  décalage et aller à l'état 34


État 26

   11 expr: LET let_binding IN . expr

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    LPAREN  décalage et aller à l'état 6

    expr  aller à l'état 35


État 27

    7 expr: TBEGIN expr TEND .

    $défaut  réduction par utilisation de la règle 7 (expr)


État 28

    6 expr: LPAREN expr RPAREN .

    $défaut  réduction par utilisation de la règle 6 (expr)


État 29

    3 program: expr TWOSEMI program .

    $défaut  réduction par utilisation de la règle 3 (program)


État 30

    8 expr: expr . expr
    9     | expr . infix_op expr
   10     | expr . SEMI expr
   10     | expr SEMI expr .

    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    SEMI    décalage et aller à l'état 16
    LPAREN  décalage et aller à l'état 6
    PLUS    décalage et aller à l'état 17
    MINUS   décalage et aller à l'état 18
    MUL     décalage et aller à l'état 19
    DIV     décalage et aller à l'état 20

    TBEGIN    [réduction par utilisation de la règle 10 (expr)]
    INT       [réduction par utilisation de la règle 10 (expr)]
    NAME      [réduction par utilisation de la règle 10 (expr)]
    LPAREN    [réduction par utilisation de la règle 10 (expr)]
    $défaut  réduction par utilisation de la règle 10 (expr)

    expr      aller à l'état 21
    infix_op  aller à l'état 22


État 31

    8 expr: expr . expr
    9     | expr . infix_op expr
    9     | expr infix_op expr .
   10     | expr . SEMI expr

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    SEMI    décalage et aller à l'état 16
    LPAREN  décalage et aller à l'état 6
    PLUS    décalage et aller à l'état 17
    MINUS   décalage et aller à l'état 18
    MUL     décalage et aller à l'état 19
    DIV     décalage et aller à l'état 20

    LET       [réduction par utilisation de la règle 9 (expr)]
    TBEGIN    [réduction par utilisation de la règle 9 (expr)]
    INT       [réduction par utilisation de la règle 9 (expr)]
    NAME      [réduction par utilisation de la règle 9 (expr)]
    SEMI      [réduction par utilisation de la règle 9 (expr)]
    LPAREN    [réduction par utilisation de la règle 9 (expr)]
    PLUS      [réduction par utilisation de la règle 9 (expr)]
    MINUS     [réduction par utilisation de la règle 9 (expr)]
    MUL       [réduction par utilisation de la règle 9 (expr)]
    DIV       [réduction par utilisation de la règle 9 (expr)]
    $défaut  réduction par utilisation de la règle 9 (expr)

    expr      aller à l'état 21
    infix_op  aller à l'état 22


État 32

    8 expr: expr . expr
    9     | expr . infix_op expr
   10     | expr . SEMI expr
   12 let_binding: NAME EQUAL expr .

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    SEMI    décalage et aller à l'état 16
    LPAREN  décalage et aller à l'état 6
    PLUS    décalage et aller à l'état 17
    MINUS   décalage et aller à l'état 18
    MUL     décalage et aller à l'état 19
    DIV     décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 12 (let_binding)

    expr      aller à l'état 21
    infix_op  aller à l'état 22


État 33

   14 parameter_list: NAME parameter_list .

    $défaut  réduction par utilisation de la règle 14 (parameter_list)


État 34

   13 let_binding: NAME parameter_list EQUAL . expr

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    LPAREN  décalage et aller à l'état 6

    expr  aller à l'état 36


État 35

    8 expr: expr . expr
    9     | expr . infix_op expr
   10     | expr . SEMI expr
   11     | LET let_binding IN expr .

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    SEMI    décalage et aller à l'état 16
    LPAREN  décalage et aller à l'état 6
    PLUS    décalage et aller à l'état 17
    MINUS   décalage et aller à l'état 18
    MUL     décalage et aller à l'état 19
    DIV     décalage et aller à l'état 20

    LET       [réduction par utilisation de la règle 11 (expr)]
    TBEGIN    [réduction par utilisation de la règle 11 (expr)]
    INT       [réduction par utilisation de la règle 11 (expr)]
    NAME      [réduction par utilisation de la règle 11 (expr)]
    SEMI      [réduction par utilisation de la règle 11 (expr)]
    LPAREN    [réduction par utilisation de la règle 11 (expr)]
    PLUS      [réduction par utilisation de la règle 11 (expr)]
    MINUS     [réduction par utilisation de la règle 11 (expr)]
    MUL       [réduction par utilisation de la règle 11 (expr)]
    DIV       [réduction par utilisation de la règle 11 (expr)]
    $défaut  réduction par utilisation de la règle 11 (expr)

    expr      aller à l'état 21
    infix_op  aller à l'état 22


État 36

    8 expr: expr . expr
    9     | expr . infix_op expr
   10     | expr . SEMI expr
   13 let_binding: NAME parameter_list EQUAL expr .

    LET     décalage et aller à l'état 1
    TBEGIN  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    NAME    décalage et aller à l'état 4
    SEMI    décalage et aller à l'état 16
    LPAREN  décalage et aller à l'état 6
    PLUS    décalage et aller à l'état 17
    MINUS   décalage et aller à l'état 18
    MUL     décalage et aller à l'état 19
    DIV     décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 13 (let_binding)

    expr      aller à l'état 21
    infix_op  aller à l'état 22
